fixed the text align of winning message

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ h1{
 
 .message {
   font-size: 4rem;
+  text-align: center;
 }
 .rstBtn {
   font-size: 3rem;
